dataset1235/2025-2/1955397009/users/4151380891/executions/2304143742_4093783519.log
== SUBMISSION (2025-09-02 15:21:42)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero: SIM
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
Digite um numero: NAO
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
Digite um numero: NAO
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
Digite um numero: NAO
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero: SIM
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero: SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 15:18:27)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
        ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
        ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
        ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
        ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
        ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
        ~~~~^~~
TypeError: not all arguments converted during string formatting
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 15:21:47)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero: SIM
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
Digite um numero: NAO
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
Digite um numero: NAO
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
Digite um numero: NAO
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero: SIM
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero: SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 15:17:43)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "sim"
else
	mensagem = "nao"

print(mensagem.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 15:22:27)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero: sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
